--- a/css/style.css
+++ b/css/style.css
@@ -1117,6 +1117,33 @@ margin: 0 auto;
 
 }
 
+#getting-started {
+    padding: 80px;
+    overflow: hidden;
+}
+
+.counter { 
+    padding: 15px;
+    box-sizing: border-box;
+    text-align: center;
+    color: #5bd0ef;
+    margin-right: 2%;
+    border-radius: 4px;
+    font-size: 24px;
+    font-weight: bold;
+    border: 2px solid #5bd0ef;
+    margin-bottom: 20px;
+ }
+
+ @media (min-width: 768px){
+    .counter {
+        width: 18%;
+        margin-right: 2%;
+        float: left;
+        margin-bottom: 0;
+    }
+ }
+
 @media (min-width: 1199px) {
     .intro-text h1 {
         font-size: 40px;
